sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:5: error: reassignment to val
    etat=false;
        ^AlgBubbleSort1:9: error: reassignment to val
        etat=true;
            ^