sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	val etat=true;
  while(etat==false){
    etat=false;
    for(i<- 0 to getNombreValeurs()-2){
      if(plusPetit(i+1,i)){
        echange(i+1,i);
        etat=true;
      }
    }
  }
}